<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ObstructiveInterfaces</string>
    <string name="hello_world">Hello world! YO!</string>
    <string name="action_settings">Settings</string>
    <string name="compose_email">Compose Email</string>
    <string name="btn_attach">Attach...</string>
    <string name="btn_send">Send</string>
    <string name="btn_eaddress">To:</string>
    <string name="btn_esubject">Subject:</string>
    <string name="attachment">dissertation draft.docx</string>
    <string name="reattaching">PG dissertation draft.docx</string>
    <string name="obstruction_message">Are you sure you want to send this email?</string>
    <string name="send_click">Send message?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="info_dialog_msg">The subject of your email reads: \"Latest dissertation update\", 
        but you have attached a file last updated in December 2012. Please reattach the file.</string>
    <string name="are_you_sure"> Are you sure you want to proceed?</string>
    <string name="title_activity_information">More info</string>
    <string name="title_notification_newMSG">New Message</string>
    <string name="supervisor_email">Timothy.Storer@glasgow.ac.uk</string>
    <string name="res_subjectmsg">RE: Latest dissertation update</string>
    <string name="pos_res_emailBody">Hi there, \n\n
        The draft looks fantastic! \n
        Well done, keep up the good work.
        
        \n\n
        Thanks,\n
        Tim</string>
    <string name="neg_res_emailBody">Hi there, \n\n
        I think you have attached the wrong file. \n
        Please send me your actual dissertation draft.
        
        \n\n
        Thanks,\n
        Tim</string>
    <string name="obs_types">Obstruction Type:</string>
    <string name="initialise">Initialise</string>
    <string name="partnum">Participant Number:</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="title_activity_obstructive_activity2">ObstructiveActivity2</string>
    <string name="new_message">New Message!</string>
    <string name="view_message">Read message</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_neg_notification">NegNotification</string>
    
    <string name="item1">Dissertation_Draft.pdf</string>
    <string name="item2">dissertation draft.docx</string>
    <string name="item3">diss_draft2.doc</string>
    <string name="item4">Tim_dissertation draft.docx</string>

</resources>