<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c9c9c9"
    android:focusable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context="com.example.obstructiveinterfaces.MainActivity$PlaceholderFragment" >

    <!--  attach button -->

    <!--  send button -->
    
    <!--  email body text field -->

	   <!-- email subject input line -->

		   

    
     <!--  email address input line -->

    <EditText
        android:id="@+id/email_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_subject"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:ems="15"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minLines="12" />

    <EditText
        android:id="@+id/email_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_body"
        android:layout_alignLeft="@+id/email_address"
        android:ems="15"
        android:hint="@string/btn_esubject"
        android:paddingBottom="15dp"
        android:textSize="15dp"
        android:layout_marginBottom="10dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/email_address"
        android:onClick="ActivitySendMsg"
        android:text="@string/btn_send"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_subject"
        android:layout_alignParentLeft="true"
        android:ems="15"
        android:hint="@string/btn_eaddress"
        android:inputType="textEmailAddress"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btn_attach"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/btn_send"
        android:layout_alignBottom="@+id/btn_send"
        android:layout_alignLeft="@+id/email_address"
        android:freezesText="true"
        android:onClick="DialogBox"
        android:text="@string/btn_attach"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/Attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/AttachmentClip"
        android:layout_toRightOf="@+id/AttachmentClip"
        android:clickable="true"
        android:onClick="DialogBox"
        android:paddingBottom="12dp"
        android:paddingLeft="10dp"
        android:text="@string/attachment"
        android:textSize="20dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/AttachmentClip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_address"
        android:src="@drawable/clippy" 
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/ReattachingFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/AttachmentClip"
        android:layout_toRightOf="@+id/AttachmentClip"
        android:clickable="true"
        android:onClick="DialogBox"
        android:paddingBottom="12dp"
        android:paddingLeft="10dp"
        android:text="@string/reattaching"
        android:textSize="20dp"
        android:visibility="invisible" />

</RelativeLayout>