<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <Button
        android:id="@+id/BTNobstruction_message_yes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/BTN_why2"
        android:layout_marginLeft="30dp"
        android:text="@string/yes"
        
        />

    <Button
        android:id="@+id/BTN_why2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/obstruction_message2"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="102dp"
        android:layout_marginTop="32dp"
        android:text="Why?" />

    <TextView
        android:id="@+id/obstruction_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:gravity="center_horizontal"
        android:text="@string/obstruction_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/BTNobstruction_message_no2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/BTN_why2"
        android:layout_marginRight="30dp"
        android:text="@string/no" />

</RelativeLayout>