<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <TextView
         android:id="@+id/attachment1"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@color/highlight"
         android:padding="15dp"
         android:text="@string/item1"
         android:textSize="30sp" />

     <TextView
         android:id="@+id/attachment2"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/attachment1"
         android:layout_marginTop="15dp"
         android:background="#00ff00"
         android:padding="15dp"
         android:text="@string/item2"
         android:textSize="30sp" />

     <TextView
         android:id="@+id/attachment3"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/attachment2"
         android:layout_marginTop="11dp"
         android:background="#FFFF00"
         android:padding="15dp"
         android:text="@string/item3"
         android:textSize="30sp" />

     <TextView
         android:id="@+id/attachment4"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/attachment3"
         android:layout_marginTop="11dp"
         android:background="#00FFFF"
         android:padding="15dp"
         android:text="@string/item4"
         android:textSize="30sp" />

     <CheckBox
         android:id="@+id/attachment2CH"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignBottom="@+id/attachment2"
         android:layout_alignParentRight="true" />

     <CheckBox
         android:id="@+id/attachment1CH"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignBottom="@+id/attachment1"
         android:layout_alignParentRight="true" />

     <CheckBox
         android:id="@+id/attachment4CH"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignBottom="@+id/attachment4"
         android:layout_alignParentRight="true" />

     <CheckBox
         android:id="@+id/attachment3CH"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignBottom="@+id/attachment3"
         android:layout_alignParentRight="true" />

</RelativeLayout>
