<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c9c9c9"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/negative_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/neg_res_subject"
        android:layout_below="@+id/neg_res_subject"
        android:layout_marginTop="44dp"
        android:background="#fff"
        android:maxEms="25"
        android:minEms="22"
        android:minLines="19"
        android:padding="5dp"
        android:text="@string/neg_res_emailBody"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/neg_res_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="59dp"
        android:text="From:"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/neg_res_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/neg_res_from"
        android:layout_below="@+id/neg_res_supervisor_email"
        android:layout_marginTop="35dp"
        android:text="@string/res_subjectmsg"
        android:textColor="#000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/neg_res_supervisor_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/neg_res_from"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/neg_res_from"
        android:ems="13"
        android:text="@string/supervisor_email"
        android:textColor="#000"
        android:textSize="22sp" />

</RelativeLayout>
